--- a/web_1.html
+++ b/web_1.html
@@ -4,8 +4,13 @@
 	<title>mi pagina web</title>
 </head>
 <body>
+	<font>
 	<p>en esta web encontraras los mejores fondos de pantalla, juegos y apps para android </p>
 	<img src="imagen_0.jpeg" sizes="" height="">
+		<img src="imagen_0.jpeg" sizes="" height="">
+
+		<img src="imagen_0.jpeg" sizes="" height="">
+
 
 </body>
 </html>
